--- a/towndeli/assets/less/main.less
+++ b/towndeli/assets/less/main.less
@@ -1091,9 +1091,11 @@ header.header {
         }
         textarea {
             border-radius: 0;
+            box-shadow: none;
         }
     }
     .modal-footer {
+        text-align: center;
         .btn-send {
             background-color:  #02b691;
             width: 70px;
@@ -1180,6 +1182,7 @@ header.header {
         }
     }
     .modal-footer {
+        text-align: center;
         .btn-send {
             background-color:  #02b691;
             width: 70px;
@@ -1333,9 +1336,11 @@ header.header {
         }
         input {
             border-radius: 0;
+            box-shadow: none;
         }
     }
     .modal-footer {
+        text-align: center;
         .btn-send {
             background-color:  #02b691;
             width: 70px;
@@ -1346,6 +1351,133 @@ header.header {
             border-radius: 0;
         }
         .btn-cacel {
+            border-radius: 0;
+        }
+    }
+}
+
+.edit-schedule-modal {
+    text-align: center;
+    padding: 0 !important;
+    &:before {
+        content: '';
+        display: inline-block;
+        height: 100%;
+        vertical-align: middle;
+        margin-right: -4px;
+    }
+    .modal-dialog {
+        @media (max-width: 858px) {
+            min-width: 310px;
+        }
+        display: inline-block;
+        text-align: left;
+        vertical-align: middle;
+    }
+    .modal-header {
+        background-color:  #ffffff;
+        .modal-title {
+            text-transform: none;
+            text-transform: none;
+            color: #000000;
+            font-size: 15px;
+            font-weight: 400;
+            line-height: 30px;
+            text-align: left;
+        }
+    }
+    .modal-body {
+        padding-top: 0;
+        .select2-selection {
+            border-width: 1px;
+            border-color: #999999;
+            border-style: solid;
+            height: 44px;
+            .select2-selection__rendered {
+                color: #333333;
+                padding-top: 10px;
+            }
+            .select2-selection__arrow {
+                top: 5px;
+            }
+        }
+        .title {
+            font-family: Arial;
+            color:  #333333;
+            font-size: 20px;
+            font-weight: 900;
+            text-align: left;
+        }
+        .cus-lable {
+            font-family: Roboto;
+            color:  #333333;
+            font-size: 14px;
+            font-weight: 700;
+            text-align: left;
+        }
+    }
+    .modal-footer {
+        text-align: center;
+        .btn-update {
+            background-color:  #02b691;
+            width: 110px;
+            height: 40px;
+            color:  #ffffff;
+            font-size: 15.99px;
+            font-weight: 400;
+            border-radius: 0;
+        }
+    }
+}
+
+.remove-schedule-modal {
+    text-align: center;
+    padding: 0 !important;
+    &:before {
+        content: '';
+        display: inline-block;
+        height: 100%;
+        vertical-align: middle;
+        margin-right: -4px;
+    }
+    .modal-dialog {
+        @media (max-width: 858px) {
+            min-width: 310px;
+        }
+        display: inline-block;
+        text-align: left;
+        vertical-align: middle;
+    }
+    .modal-body {
+        .remove-icon {
+            text-align: center;
+        }
+        .text {
+            color:  #000000;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 25px;
+            text-align: center;
+            padding-top: 20px;
+            span {
+                display: block;
+            }
+            .date {
+                display: inline;
+            }
+        }
+    }
+    .modal-footer {
+        border: none !important;
+        height: 80px;
+        text-align: center;
+        .btn-remove {
+            background-color: #02b691;
+            width: 110px;
+            height: 40px;
+            color: #fff;
+            font-size: 15.99px;
+            font-weight: 400;
             border-radius: 0;
         }
     }
@@ -4006,6 +4138,9 @@ header.header {
                                 color: #fff;
                                 padding: 10px;
                                 border-bottom: none;
+                                &:nth-child(2) {
+                                    width: 160px;
+                                }
                             }
                         }
                     }
@@ -4077,6 +4212,22 @@ header.header {
                                         height: 14px;
                                         margin-left: 2px;
                                         background: url('../images/yellow-star.png') no-repeat;
+                                    }
+                                }
+                                &.td-name {
+                                    .edit-icon {
+                                        position: relative;
+                                        float: right;
+                                        bottom: -3px;
+                                        width: 10px;
+                                        height: 10px;
+                                        display: none;
+                                        background: url('../images/pencil.png') no-repeat;
+                                    }
+                                    &:hover {
+                                        .edit-icon {
+                                            display: inline;
+                                        }
                                     }
                                 }
                             }
