--- a/towndeli/assets/styles/styles.css
+++ b/towndeli/assets/styles/styles.css
@@ -8344,6 +8344,10 @@ header.header .top-links li .child-box ul li a.highlight {
 }
 .review-modal .modal-body textarea {
   border-radius: 0;
+  box-shadow: none;
+}
+.review-modal .modal-footer {
+  text-align: center;
 }
 .review-modal .modal-footer .btn-send {
   background-color: #02b691;
@@ -8426,6 +8430,9 @@ header.header .top-links li .child-box ul li a.highlight {
 }
 .review-order-modal .modal-body textarea {
   border-radius: 0;
+}
+.review-order-modal .modal-footer {
+  text-align: center;
 }
 .review-order-modal .modal-footer .btn-send {
   background-color: #02b691;
@@ -8588,6 +8595,11 @@ header.header .top-links li .child-box ul li a.highlight {
 .send-order-email-modal .modal-body input,
 .edit-order-name-modal .modal-body input {
   border-radius: 0;
+  box-shadow: none;
+}
+.send-order-email-modal .modal-footer,
+.edit-order-name-modal .modal-footer {
+  text-align: center;
 }
 .send-order-email-modal .modal-footer .btn-send,
 .edit-order-name-modal .modal-footer .btn-send {
@@ -8601,6 +8613,132 @@ header.header .top-links li .child-box ul li a.highlight {
 }
 .send-order-email-modal .modal-footer .btn-cacel,
 .edit-order-name-modal .modal-footer .btn-cacel {
+  border-radius: 0;
+}
+.edit-schedule-modal {
+  text-align: center;
+  padding: 0 !important;
+}
+.edit-schedule-modal:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -4px;
+}
+.edit-schedule-modal .modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
+@media (max-width: 858px) {
+  .edit-schedule-modal .modal-dialog {
+    min-width: 310px;
+  }
+}
+.edit-schedule-modal .modal-header {
+  background-color: #ffffff;
+}
+.edit-schedule-modal .modal-header .modal-title {
+  text-transform: none;
+  color: #000000;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 30px;
+  text-align: left;
+}
+.edit-schedule-modal .modal-body {
+  padding-top: 0;
+}
+.edit-schedule-modal .modal-body .select2-selection {
+  border-width: 1px;
+  border-color: #999999;
+  border-style: solid;
+  height: 44px;
+}
+.edit-schedule-modal .modal-body .select2-selection .select2-selection__rendered {
+  color: #333333;
+  padding-top: 10px;
+}
+.edit-schedule-modal .modal-body .select2-selection .select2-selection__arrow {
+  top: 5px;
+}
+.edit-schedule-modal .modal-body .title {
+  font-family: Arial;
+  color: #333333;
+  font-size: 20px;
+  font-weight: 900;
+  text-align: left;
+}
+.edit-schedule-modal .modal-body .cus-lable {
+  font-family: Roboto;
+  color: #333333;
+  font-size: 14px;
+  font-weight: 700;
+  text-align: left;
+}
+.edit-schedule-modal .modal-footer {
+  text-align: center;
+}
+.edit-schedule-modal .modal-footer .btn-update {
+  background-color: #02b691;
+  width: 110px;
+  height: 40px;
+  color: #ffffff;
+  font-size: 15.99px;
+  font-weight: 400;
+  border-radius: 0;
+}
+.remove-schedule-modal {
+  text-align: center;
+  padding: 0 !important;
+}
+.remove-schedule-modal:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -4px;
+}
+.remove-schedule-modal .modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
+@media (max-width: 858px) {
+  .remove-schedule-modal .modal-dialog {
+    min-width: 310px;
+  }
+}
+.remove-schedule-modal .modal-body .remove-icon {
+  text-align: center;
+}
+.remove-schedule-modal .modal-body .text {
+  color: #000000;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 25px;
+  text-align: center;
+  padding-top: 20px;
+}
+.remove-schedule-modal .modal-body .text span {
+  display: block;
+}
+.remove-schedule-modal .modal-body .text .date {
+  display: inline;
+}
+.remove-schedule-modal .modal-footer {
+  border: none !important;
+  height: 80px;
+  text-align: center;
+}
+.remove-schedule-modal .modal-footer .btn-remove {
+  background-color: #02b691;
+  width: 110px;
+  height: 40px;
+  color: #fff;
+  font-size: 15.99px;
+  font-weight: 400;
   border-radius: 0;
 }
 /* ---------------------------------------
@@ -11273,6 +11411,9 @@ header.header .top-links li .child-box ul li a.highlight {
   padding: 10px;
   border-bottom: none;
 }
+.main .wrap-orders-history .orders-history-content .table-responsive .orders-table thead tr th:nth-child(2) {
+  width: 160px;
+}
 .main .wrap-orders-history .orders-history-content .table-responsive .orders-table tbody tr:nth-child(2n) td {
   background-color: #eee;
 }
@@ -11349,6 +11490,18 @@ header.header .top-links li .child-box ul li a.highlight {
   height: 14px;
   margin-left: 2px;
   background: url('../images/yellow-star.png') no-repeat;
+}
+.main .wrap-orders-history .orders-history-content .table-responsive .orders-table tbody tr td.td-name .edit-icon {
+  position: relative;
+  float: right;
+  bottom: -3px;
+  width: 10px;
+  height: 10px;
+  display: none;
+  background: url('../images/pencil.png') no-repeat;
+}
+.main .wrap-orders-history .orders-history-content .table-responsive .orders-table tbody tr td.td-name:hover .edit-icon {
+  display: inline;
 }
 .main .wrap-orders-history .orders-history-content .table-responsive .orders-table tbody .btn-control {
   padding-top: 15px;
